<resources>
    <string name="app_name">Galas</string>
    <string name="titulo_plantilla">Premios Oscar del año </string>
    <string name="director">Mejor director: </string>
    <string name="pelicula">Mejor película: </string>
    <string name="menu_añadir">Añadir gala</string>
    <string name="menu_listar">Ver las galas</string>
    <string name="menu_juego">Juego de preguntas</string>
    <string name="gala_actual">Nominados premios Oscar del año 2023</string>
    <string name="mejor_pelicula">Mejor película</string>
    <string name="sin_novedad">Sin novedad en el frente</string>
    <string name="almas_pena">Almas en pena de Inisherin</string>
    <string name="avatar">Avatar: El sentido del agua</string>
    <string name="elvis">Elvis</string>
    <string name="todo_a_la_vez">Todo a la vez en todas partes</string>
    <string name="fabelman">Los Fabelman</string>
    <string name="tar">TÁR</string>
    <string name="top_gun">Top Gun Maverick</string>
    <string name="triangulo">El triángulo de la trizteza</string>
    <string name="ellas">Ellas hablan</string>
    <string name="martin">Martin McDonagh</string>
    <string name="daniel">Daniel Kwan y Daniel Scheinert</string>
    <string name="todd">Todd Field</string>
    <string name="spielberg">Steven Spielberg</string>
    <string name="ruben">Ruben Östlund</string>
    <string name="cate">Cate Blanchett</string>
    <string name="ana">Ana de Armas</string>
    <string name="andrea">Andrea Riseborough</string>
    <string name="michelle">Michelle Yeoh</string>
    <string name="michelleW">Michelle Williams</string>
    <string name="brendan">Brendan Fraser</string>
    <string name="austin">Austin Butler</string>
    <string name="colin">Colin Farrell</string>
    <string name="paul">Paul Mescal</string>
    <string name="bill">Bill Nighy</string>
    <string name="angela">Angela Basset</string>
    <string name="jamie">Jamie Lee Curtis</string>
    <string name="kerry">Kerry Condon</string>
    <string name="hong">Hong Chau</string>
    <string name="stephanie">Stephanie Hsu</string>
    <string name="ke">Ke Huy Quan</string>
    <string name="brian">Brian Tyree Henry</string>
    <string name="judd">Los Fabelman</string>
    <string name="brendanG">Brendan Gleeson</string>
    <string name="barry">Barry Keoghan</string>
    <string name="living">Living</string>
    <string name="puñales">Puñales por la espalda: El misterio de Glass Onion</string>
    <string name="babylon">Babylon</string>
    <string name="argentina">Argentina, 1985</string>
    <string name="close">Close</string>
    <string name="EO">EO</string>
    <string name="the_quiet">The Quiet girl</string>
    <string name="bardo">Bardo, falsa crónica de unas cuantas verdades</string>
    <string name="imperio">El imperio de la luz</string>
    <string name="pinocho">Pinocho de Guillermo del Toro</string>
    <string name="marcel">Marcel the shell with shoes on</string>
    <string name="gato_botas">El gato con botas: El último deseo</string>
    <string name="monstruo">El monstruo marino</string>
    <string name="red">Red</string>
    <string name="black_panther">Black Panther: Wakanda forever</string>
    <string name="viaje_paris">El viaje a París de la señora Harris</string>
    <string name="novedad">Sin novedad en el frente</string>
    <string name="batman">Batman</string>
    <string name="whale">The whale</string>
    <string name="lift">Lifth me up(Black Panther: Wakanda forever)</string>
    <string name="naatu">Naatu Naatu(RRR)</string>
    <string name="applause">Applause(Tell it like a woman)</string>
    <string name="hold">Hold my hand(Top gun Maverick)</string>
    <string name="this_is">This is a life(Todo a la vez en todas partes)</string>
    <string name="all">All that breathes</string>
    <string name="la_belleza">La belleza y el dolor</string>
    <string name="fire">Fire of love</string>
    <string name="a_house">A house made of splinters</string>
    <string name="navanly">Navanly</string>
    <string name="mejor_director">Mejor director</string>
    <string name="actriz">Mejor actriz</string>
    <string name="actor">Mejor actor</string>
    <string name="actriz_reparto">Mejor actriz de reparto</string>
    <string name="actor_reparto">Mejor actor de reparto</string>
    <string name="guion_original">Mejor guión original</string>
    <string name="guion_adaptado">Mejor guión adaptado</string>
    <string name="producción">Mejor diseño de producción</string>
    <string name="pelicula_internacional">Mejor película internacional</string>
    <string name="montaje">Mejor montaje</string>
    <string name="fotografia">Mejor fotografía</string>
    <string name="peli_animacion">Mejor película de animación</string>
    <string name="vestuario">Mejor diseño de vestuario</string>
    <string name="maquillaje">Mejor maquillaje y peluquería</string>
    <string name="sonido">Mejor sonido</string>
    <string name="cancion">Mejor canción</string>
    <string name="documental">Mejor película documental</string>
    <string name="banda_sonora">Mejor banda sonora</string>
    <string name="efectos">Mejores efectos especiales</string>
    <string name="doc_corto">Mejor cortometraje documental</string>
    <string name="gala_añadir">Crear gala</string>
    <string name="gala_ver">Ver galas</string>
    <string name="actual_gala">Nominaciones gala 2023</string>
    <string name="juego_preguntas">Quiz Oscar</string>
    <string name="test_preguntas">Test de preguntas</string>
    <string name="introduccion_preguntas">Comprueba tus conocimietos sobre el mundo de los Oscar con este sencillo test</string>
    <string name="comenzar">Comenzar</string>
</resources>