<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nueva_gala"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/a_adir"
        android:text="@string/gala_añadir"
        android:background="@color/dark_gray"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/listar_gala"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/listar"
        android:text="@string/gala_ver"
        android:background="@color/dark_gray"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/actual_gala"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/oscar"
        android:text="@string/actual_gala"
        android:background="@color/dark_gray"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/juego_preguntas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/preguntas"
        android:text="@string/juego_preguntas"
        android:background="@color/dark_gray"
        android:layout_weight="1"/>
</LinearLayout>