<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_plantilla"
            style="@style/titulo_principal"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/textYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/titulo_principal"
            android:layout_row="0"
            android:layout_column="1"/>
    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pelicula"
            style="@style/titulo_principal"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            style="@style/titulo_principal"
            android:layout_column="0"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/textPelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/resultados"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/textDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/resultados"
            android:layout_column="1"
            android:layout_row="1"/>
    </GridLayout>

</LinearLayout>